--- a/SanAndreasRiots/SanAndreasRiots.csproj
+++ b/SanAndreasRiots/SanAndreasRiots.csproj
@@ -51,6 +51,9 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Core\Script.cs" />
+    <Compile Include="Core\ScriptDispatcher.cs" />
+    <Compile Include="Core\ScriptProducer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
